[package]
name = "cloudcord"
version = "0.1.0"
edition = "2021"

[dependencies]
async-recursion = "1.0.5"
dotenv = "0.15.0"
nanoid = "0.4.0"
ratelimit = "0.9.0"

[dependencies.reqwest]
version = "0.11.22"
features = ["multipart", "json"]

[dependencies.serde]
version = "1.0.194"
features = ["serde_derive"]

[dependencies.tokio]
version = "1.35.1"
features = ["full"]
